# logger

./: .dockerignore  CMakeLists.txt  Dockerfile.valgrind  logger.cpp  main.cpp  vcpkg.json
scripts/: run-valgrind.ps1  run-valgrind.sh
src/: logger.h
tests/: CMakeLists.txt  logger_tests.cpp
